Split modules by Java version (#1)